intro half done + tracking using the actual system

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,7 @@
 % packages
 \usepackage{amsmath}
 \usepackage{amsfonts}
-\usepackage{amssymb}
+%\usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{enumerate}
 \usepackage{amsthm}
@@ -23,6 +23,7 @@
 \newcommand{\MS}[1]{{\color{blue} \textbf{MS:} #1}}
 \newcommand{\MZ}[1]{{\color{green} \textbf{MZ:} #1}}
 \newcommand{\new}[1]{{\color{cyan} #1}}
+\newcommand{\todo}[1]{{\color{orange} \textbf{TODO:} #1}}
 
 % macros
 \newcommand{\Sol}{\mathit{Sol}}
@@ -50,6 +51,7 @@
 \def\avoidl{\mathit{AvoidLoc}}
 \def\avoidg{\mathit{AvoidGlob}}
 \def\init{\mathit{Init}}
+\def\track{\mathit{track}}
 
 
 % environments
