--- a/intro.tex
+++ b/intro.tex
@@ -17,11 +17,32 @@ It can handle arbitrary continuous nonlinear system models, external disturbance
 The weakness of ABCD is its poor scalability: 
 Usually ABCD uses a state-space discretization for computing the abstraction, which causes an exponential blow-up in the time and space complexity.
 
-In this paper, we extend ABCD---more in a practical sense---to synthesis of decentralized controllers for a group of robots, operating in a shared workspace.
+In this paper, we extend ABCD---more in a practical sense---to synthesize decentralized controllers for a group of robots, operating in a shared workspace.
 In general, the group can consist of a heterogeneous mix of robotic systems.
-We do not require the robots to be able to communicate during runtime.
+Also, we do not require the robots to be able to communicate during runtime.
 We assume that each robot has been assigned a reach-avoid task, where the robot needs to reach a set of target states while avoiding a set of static obstacles.
-Moreover, each robot is required to avoid collision with other moving robots by maintaining a minimum safe distance.
-The synthesis problem is then to algorithmically come up with controllers for each robot such that all these requirements are fulfilled for all the robots.
+Additionally, each robot is required to avoid collision with other (possibly moving) robots by maintaining a minimum safe distance.
+We use ABCD to algorithmically come up with verified controllers for each individual robot such that all these requirements are fulfilled.
 
-Since 
+The collision avoidance requirement, in the absence of inter-robot communication, makes the controller synthesis problem especially challenging.
+One option will be to treat the other robots as dynamic obstacles.
+There are two problems.
+Firstly, it is not known how to deal with dynamic obstacles in the ABCD framework.
+Secondly, even if we knew how to deal with that, this dynamic obstacle assumption could lead to pessimistic, and often empty, solution.
+
+On the other hand, the issue with dynamic obstacles goes away if we use a centralized approach, by treating the group of robots as one single system.
+In the centralized approach, we need to build a product of the models of each individual robot; the product captures the simultaneous evolution of the global state of the system.
+The states of collision, which are dynamic in nature, now conveniently become a set of static obstacles in the global state space.
+We can then, at least in theory, use ABCD to synthesize a joint controller for the group of robots, and afterwards decompose the joint controller into individual controller for each robot.
+(The decomposition is possible due to the underlying decentralized control structure.)
+
+Unfortunately, ABCD does not scale to the usual large size of the global state space in the centralized approach.
+To circumvent this issue, in this paper, we propose a two-layered hierarchical controller synthesis approach involving ABCD.
+In the top layer, we use some off-the-shelf fast controller synthesis method to make a joint global plan using the aforementioned centralized approach.
+In this paper, we use ALTRO \cite{altro} in the top layer, which is an optimal-control-based controller synthesis tool that scales quite well to large dimensional system.
+Unfortunately, the fast and scalable tools, including ALTRO, usually do not provide formal guarantees against external disturbances or modeling uncertainties.
+So in the bottom layer, we use ABCD to synthesize formally verified \emph{tracking} controller for each robot for following the projection of the joint plan on the robot's state space.
+
+Our primary contribution is the extension of ABCD to tracking objectives.
+This enables the use of ABCD in the hierarchical design principle, which found success in many other design contexts \cite{murray,schmidt hierarchical DES, sayan mitra}.
+\todo{Need to discuss.}
